# bevy-defense

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
core/: Cargo.toml
core/src/: camera.rs  components.rs  main.rs  map.rs  path.rs  player.rs  render_plugin.rs  states.rs  timer.rs
core/src/animation/: components.rs  plugin.rs  systems.rs
core/src/gui/: console.rs  mod.rs  rx.rs  tx.rs  utils.rs
core/src/gui/rx/: handle_draw_cursor.rs  handle_spawn_tower.rs  mod.rs  plugin.rs  router.rs
core/src/gui/tx/: mod.rs  plugin.rs  utils.rs
core/src/path/: mod.rs  path.rs  plugin.rs  systems.rs
core/src/scenario/: mod.rs  path.rs  plugin.rs  scenario.rs  systems.rs
core/src/timers/: mod.rs  plugin.rs  round_timer.rs  tick_timer.rs
core/src/towers/: components.rs  config.rs  events.rs  matchers.rs  mod.rs  plugin.rs  render_plugin.rs  systems.rs  tower.rs
core/src/towers/aoe_tower/: config.rs  utils.rs
core/src/towers/attacks/: aoe_attack.rs  basic_attack.rs  mod.rs  speed_buff.rs  towers_in_range.rs  utils.rs
core/src/towers/basic_tower/: bundle.rs  config.rs  mod.rs  model.rs  systems.rs  utils.rs
core/src/towers/components/: misc.rs  mod.rs  projectile.rs  stats.rs  tower_range.rs  utils.rs
core/src/towers/fast_tower/: config.rs  mod.rs  systems.rs  utils.rs
core/src/towers/ranges/: basic_range.rs  mod.rs
core/src/towers/slow_tower/: config.rs  utils.rs
core/src/towers/systems/: misc.rs  (+5 more)
core/src/units/: basic_unit.rs  components.rs  config.rs  health_bar.rs  matchers.rs  mod.rs  plugin.rs  render_plugin.rs  systems.rs  utils.rs
(+71 files in other folders)
