[package]
name = "bevy-defense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
### REMOVE THIS FOR RELEASE BUILDS ###
# wasm builds dont work with dynamic linking https://www.reddit.com/r/bevy/comments/16zuzfn/bevy_wasm_build_problems_i_had_and_their_solutions/
# bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy = "0.12"
wasm-server-runner = "0.5.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
