[package]
name = "bevy-defense"
version = "0.1.0"
edition = "2021"

[dependencies]
### UNCOMMENT THIS FOR RELEASE BUILDS ###
# wasm builds dont work with dynamic linking https://www.reddit.com/r/bevy/comments/16zuzfn/bevy_wasm_build_problems_i_had_and_their_solutions/
# bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy = "0.13"
js-sys = "0.3.67"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = "0.2.92"
wasm-bindgen-cli = "0.2.92"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[features]
server = []